<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:textAppearance="@android:style/TextAppearance"
            android:padding="@dimen/padding_8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:layout_marginBottom="@dimen/margin_result"
            android:background="@drawable/result_background"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_result"
                android:layout_marginBottom="@dimen/margin_result"
                android:layout_toStartOf="@id/button_copy"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/ResulTextAppearence"
                tools:text="qQwWeE" />

            <ImageButton
                android:id="@+id/button_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/copy_image_button_1"
                android:src="@drawable/ic_copy_copy_black_24dp" />

        </RelativeLayout>


        <EditText
            android:id="@+id/source_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/helper_hint_russian_password"
            tools:text="йЙцЦуУ"
             />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:padding="@dimen/activity_padding">

            <ImageView
                android:id="@+id/quality"
                android:layout_width="@dimen/indicator_width"
                android:layout_height="@dimen/indicator_height"
                android:layout_alignParentEnd="true"
                android:src="@drawable/quakity_indicator" />

            <TextView
                android:id="@+id/quality_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/quality"
                android:layout_alignParentStart="true"
                android:hint="@string/quality_hint" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:padding="@dimen/margin_8dp"
            android:text="@string/text_view_generate_help_text"
            android:textAppearance="@android:style/TextAppearance" />

        <CheckBox
            android:id="@+id/check_uppercase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4dp"
            android:text="@string/check_box_uppercase" />

        <CheckBox
            android:id="@+id/check_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4dp"
            android:text="@string/check_box_numbers" />

        <CheckBox
            android:id="@+id/check_special_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4dp"
            android:text="@string/check_box_special_characters" />


        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20"
            android:padding="@dimen/activity_padding"
            android:progress="2" />

        <TextView
            android:id="@+id/text_seekBar_helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:layout_marginBottom="@dimen/margin_result"
            android:background="@drawable/result_background"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/result_text_generated_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_result"
                android:layout_marginBottom="@dimen/margin_result"
                android:layout_toStartOf="@id/button_copy_generated_password"
                android:textAppearance="@style/ResulTextAppearence"
                tools:text="qQwWeE" />

            <ImageButton
                android:id="@+id/button_copy_generated_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/copy_image_button_1"
                android:src="@drawable/ic_copy_copy_black_24dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_generated_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/button_generated_password" />

    </LinearLayout>
</ScrollView>